--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/ehpc/test-heroku-owls/issues"
   },
-  "homepage": "https://github.com/ehpc/test-heroku-owls#readme"
+  "homepage": "https://github.com/ehpc/test-heroku-owls#readme",
+  "engines": {
+    "node": "14.x"
+  }
 }
